1.1
Edit easing curve for transition
Font of text objects is now editable