@@ -1,3 +1,5 @@
 1.1
 Edit easing curve for transition
 Font of text objects is now editable
+News panel added
+Timeline is not limited anymore
